feature/CMS-188 feat: add mappers for PlatformAdminUser and PlatformVerificationToken, enhance mail subscriber handling
- Introduced PlatformAdminUserMapper and PlatformVerificationTokenMapper to facilitate conversions between domain and entity models.
- Updated PlatformAdminUserPersistenceAdapter and PlatformVerificationTokenRepositoryImpl to utilize the new mappers for improved data handling.
- Refactored PlatformMailMapper to implement shallow mapping for subscribers to prevent infinite recursion.
- Enhanced test coverage for the new mappers to ensure accurate field mapping.

These changes improve the structure and maintainability of the mail marketing module and enhance the overall data handling capabilities.